# dinov3-in1k-probes

./: .gitignore  README.md  demo.py  print_metrics.py  push_to_hub.py  pyproject.toml
src/dinov3_in1k_probes/: __init__.py  dinov3_linear_clf_head.py
src/dinov3_probes/: __init__.py  dinov3_linear_clf_head.py
