[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dinov3-probes"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.36.0",
    "torch>=2.9.1",
]
license = "MIT"
authors = [{name = "Yohaï-Eliel Berreby", email = "me@yberreby.com"}]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "accelerate>=1.11.0",
    "ipython>=9.7.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "safetensors>=0.6.2",
    "timm>=1.0.22",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "tyro>=0.9.35",
    "yaspin>=3.3.0",
]
